--- a/Paper 2 PhD Warped GPs/Warping Parker challenge data 1D all holes cleaned.ipynb
+++ b/Paper 2 PhD Warped GPs/Warping Parker challenge data 1D all holes cleaned.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,32 +10,29 @@
     "from GPR_LS_V import GaussianProcessRegressionLengthscaleVariance\n",
     "from GPR_CHOL_LS_V import GaussianProcessRegressionLengthscaleVarianceCholesky\n",
     "from GPR_CHOL_LS import GaussianProcessRegressionLengthscaleCholesky\n",
-    "\n",
+    "from sklearn.gaussian_process import GaussianProcessRegressor\n",
+    "from sklearn.gaussian_process.kernels import RBF, WhiteKernel\n",
     "import numpy as np \n",
     "import pandas as pd \n",
-    "from scipy import linalg\n",
     "import matplotlib.pyplot as pl\n",
-    "import plotly.express as px\n",
-    "import plotly.graph_objects as go\n",
-    "import watermark\n",
-    "import seaborn as sns\n",
+    "\n",
     "\n",
     "np.random.seed(100) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "adt = pd.read_csv(\"../Warping-tests/engineered_data/assay_desurveyed_transformed_Mlith_domain.csv\")\n",
-    "domained = pd.read_csv('../Warping-tests/engineered_data/blockmodel_domained_NN.csv')"
+    "adt = pd.read_csv(\"C:/Users/flea0265\\Github/DARE-parker-challenge/engineered_data/assay_desurveyed_transformed_Mlith_domain.csv\")\n",
+    "domained = pd.read_csv(\"../../DARE-parker-challenge/engineered_data/blockmodel_domained_NN.csv\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,15 +62,6 @@
     "mask = adt['HOLEID'].isin(counts[counts > 40].index) & ~adt['Cu_pct'].isna()\n",
     "result = adt[mask]\n",
     "adt_Cu2 = adt_Cu"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "torch.tensor(x)"
    ]
   },
   {
@@ -90,9 +78,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.gaussian_process import GaussianProcessRegressor\n",
-    "from sklearn.gaussian_process.kernels import RBF, WhiteKernel\n",
-    "\n",
     "np.random.seed(100) \n",
     "means = [] \n",
     "stds = []\n",
@@ -888,7 +873,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4
  },
