--- a/Paper 3 PhD BNNs for multivariate predictions/NN 2D 1 hole.ipynb
+++ b/Paper 3 PhD BNNs for multivariate predictions/NN 2D 1 hole.ipynb
@@ -57,15 +57,30 @@
     "# Filter the data for the selected hole\n",
     "hole_data = two_composite_1mineral[two_composite_1mineral['Name'] == hole_name]\n",
     "\n",
+    "# Define the columns to normalize\n",
+    "columns_to_normalize = ['X', 'Y', 'Z']  # Add all columns you want to normalize\n",
+    "\n",
+    "min_values = hole_data[columns_to_normalize].min()\n",
+    "\n",
+    "for column in columns_to_normalize:\n",
+    "    hole_data[column] = hole_data[column] - min_values[column]\n",
+    "\n",
+    "# Calculate the minimum and maximum values from the entire dataset\n",
+    "min_values = hole_data[columns_to_normalize].min().min()\n",
+    "max_values = hole_data[columns_to_normalize].max().max()\n",
+    "\n",
+    "# Scale the data to (0, 1) using the calculated minimum and maximum values\n",
+    "for column in columns_to_normalize:\n",
+    "    hole_data[column] = (hole_data[column] - min_values) / (max_values - min_values)\n",
+    "\n",
     "\n",
     "# Create a MinMaxScaler instance\n",
     "scaler = MinMaxScaler()\n",
     "\n",
-    "# Define the columns to normalize\n",
-    "columns_to_normalize = ['X','Y', 'Z', mineral]  # Add all columns you want to normalize\n",
     "\n",
     "# Fit the scaler to your data and transform the specified columns\n",
-    "hole_data.loc[:, columns_to_normalize] = scaler.fit_transform(hole_data.loc[:, columns_to_normalize])\n",
+    "hole_data.loc[:, [mineral]] = scaler.fit_transform(hole_data.loc[:, [mineral]])\n",
+    "\n",
     "\n",
     "\n",
     "# Extract the features (X and Y coordinates) and target (mineral) for the selected hole\n",
@@ -102,18 +117,18 @@
     "y_test = y[np.sort(test_indices)]\n",
     "\n",
     "model = nn.Sequential(\n",
-    "    nn.Linear(in_features=2, out_features=500),\n",
+    "    nn.Linear(in_features=2, out_features=300),\n",
     "    nn.ReLU(),\n",
-    "    nn.Linear(in_features=500, out_features=1)\n",
+    "    nn.Linear(in_features=300, out_features=1)\n",
     ")\n",
     "\n",
     "mse_loss = nn.MSELoss()\n",
-    "optimizer = optim.Adam(model.parameters(), lr=0.0005)\n",
+    "optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
     "\n",
     "train_losses = []  # To store training losses during training\n",
     "test_losses = []   # To store test losses during training\n",
     "\n",
-    "for step in range(200):\n",
+    "for step in range(1000):\n",
     "    pre = model(x_train)\n",
     "    mse = mse_loss(pre, y_train)\n",
     "    cost = mse\n",
@@ -212,30 +227,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Subset data for each mineral\n",
+    "\n",
     "mineral = 'Density_gcm3'\n",
     "two_composite_filtered = two_composite_filtered.loc[:,[\"Name\", 'X', 'Y', 'Z', mineral]]\n",
     "two_composite_1mineral = two_composite_filtered.dropna(subset=[mineral])\n",
     "for hole_name in two_composite_filtered['Name'].unique():\n",
-    "    #Subset data for each mineral\n",
-    "\n",
-    "\n",
+    "    \n",
     "    # Define the specific hole you want to predict for\n",
     "\n",
     "    # Filter the data for the selected hole\n",
-    "    hole_data = two_composite_1mineral[two_composite_1mineral['Name'] == hole_name]\n",
+    "    hole_data = two_composite_1mineral.loc[two_composite_1mineral['Name'] == hole_name]\n",
     "    if len(hole_data) < 100:\n",
     "        continue\n",
     "    \n",
+    "    # Define the columns to normalize\n",
+    "    columns_to_normalize = ['X', 'Y', 'Z']  # Add all columns you want to normalize\n",
+    "\n",
+    "    min_values = hole_data[columns_to_normalize].min()\n",
+    "\n",
+    "    for column in columns_to_normalize:\n",
+    "        hole_data.loc[:, column] = hole_data[column] - min_values[column]\n",
+    "\n",
+    "    # Calculate the minimum and maximum values from the entire dataset\n",
+    "    min_values = hole_data[columns_to_normalize].min().min()\n",
+    "    max_values = hole_data[columns_to_normalize].max().max()\n",
+    "\n",
+    "    # Scale the data to (0, 1) using the calculated minimum and maximum values\n",
+    "    for column in columns_to_normalize:\n",
+    "        hole_data[column] = (hole_data[column] - min_values) / (max_values - min_values)\n",
+    "\n",
     "\n",
     "    # Create a MinMaxScaler instance\n",
     "    scaler = MinMaxScaler()\n",
     "\n",
-    "    # Define the columns to normalize\n",
-    "    columns_to_normalize = ['X','Y', 'Z', mineral]  # Add all columns you want to normalize\n",
     "\n",
     "    # Fit the scaler to your data and transform the specified columns\n",
-    "    hole_data.loc[:, columns_to_normalize] = scaler.fit_transform(hole_data.loc[:, columns_to_normalize])\n",
-    "\n",
+    "    hole_data.loc[:, [mineral]] = scaler.fit_transform(hole_data.loc[:, [mineral]])\n",
     "\n",
     "    # Extract the features (X and Y coordinates) and target (mineral) for the selected hole\n",
     "    x = hole_data[['X', 'Z']].values#[:,np.newaxis] makes the second dimension explicit\n",
@@ -386,7 +414,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.9.15"
   },
   "orig_nbformat": 4
  },
