--- a/Paper 3 PhD BNNs for multivariate predictions/NN 2D full deposit.ipynb
+++ b/Paper 3 PhD BNNs for multivariate predictions/NN 2D full deposit.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,28 +43,40 @@
     "from sklearn.preprocessing import MinMaxScaler\n",
     "mineral = 'Density_gcm3'\n",
     "two_composite_1mineral = two_composite_filtered.loc[:,[\"Name\", 'X', 'Y', 'Z', mineral]]\n",
-    "hole_data = two_composite_1mineral.dropna(subset=[mineral])\n",
+    "deposit_data = two_composite_1mineral.dropna(subset=[mineral])\n",
     "    \n",
-    "  \n",
+    "# Define the columns to normalize\n",
+    "columns_to_normalize = ['X', 'Y', 'Z']  # Add all columns you want to normalize\n",
+    "\n",
+    "min_values = deposit_data[columns_to_normalize].min()\n",
+    "\n",
+    "for column in columns_to_normalize:\n",
+    "    deposit_data[column] = deposit_data[column] - min_values[column]\n",
+    "\n",
+    "# Calculate the minimum and maximum values from the entire dataset\n",
+    "min_values = deposit_data[columns_to_normalize].min().min()\n",
+    "max_values = deposit_data[columns_to_normalize].max().max()\n",
+    "\n",
+    "# Scale the data to (0, 1) using the calculated minimum and maximum values\n",
+    "for column in columns_to_normalize:\n",
+    "    deposit_data[column] = (deposit_data[column] - min_values) / (max_values - min_values)\n",
+    "\n",
+    "\n",
     "# Create a MinMaxScaler instance\n",
     "scaler = MinMaxScaler()\n",
     "\n",
-    "# Define the columns to normalize\n",
-    "columns_to_normalize = ['X','Y', 'Z', mineral]  # Add all columns you want to normalize\n",
     "\n",
     "# Fit the scaler to your data and transform the specified columns\n",
-    "hole_data.loc[:, columns_to_normalize] = scaler.fit_transform(hole_data.loc[:, columns_to_normalize])\n",
+    "deposit_data.loc[:, [mineral]] = scaler.fit_transform(deposit_data.loc[:, [mineral]])\n",
     "\n",
-    "\n",
-    "# Extract the features (X and Y coordinates) and target (mineral) for the selected hole\n",
-    "x = hole_data[['X', 'Z']].values#[:,np.newaxis] makes the second dimension explicit\n",
-    "y = hole_data[mineral].values[:,np.newaxis] #[:,np.newaxis] makes the second dimension explicit\n",
+    "x = deposit_data[['X', 'Y']].values  # Use X, Y, and Z coordinates\n",
+    "y = deposit_data[mineral].values[:, np.newaxis]  # Keep mineral as the output\n",
+    "x = x.reshape(len(deposit_data), 3)\n",
     "\n",
     "x = torch.tensor(x)\n",
     "y = torch.tensor(y)\n",
     "x = x.to(torch.float32)\n",
     "y = y.to(torch.float32)\n",
-    "\n",
     "\n",
     "\n",
     "# Split the data into train and test sets\n",
@@ -217,7 +229,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.9.15"
   },
   "orig_nbformat": 4
  },
