--- a/Paper 3 PhD BNNs for multivariate predictions/NN 2D 1 hole.ipynb
+++ b/Paper 3 PhD BNNs for multivariate predictions/NN 2D 1 hole.ipynb
@@ -119,16 +119,17 @@
     "model = nn.Sequential(\n",
     "    nn.Linear(in_features=2, out_features=300),\n",
     "    nn.ReLU(),\n",
-    "    nn.Linear(in_features=300, out_features=1)\n",
+    "    nn.Linear(in_features=300, out_features=1),\n",
+    "    nn.Sigmoid(),\n",
     ")\n",
     "\n",
     "mse_loss = nn.MSELoss()\n",
-    "optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
+    "optimizer = optim.Adam(model.parameters(), lr=0.01)\n",
     "\n",
     "train_losses = []  # To store training losses during training\n",
     "test_losses = []   # To store test losses during training\n",
     "\n",
-    "for step in range(1000):\n",
+    "for step in range(10000):\n",
     "    pre = model(x_train)\n",
     "    mse = mse_loss(pre, y_train)\n",
     "    cost = mse\n",
@@ -146,8 +147,8 @@
     "    mse_test = mse_loss(pre_test, y_test)\n",
     "    test_losses.append(mse_test.item())\n",
     "\n",
-    "    if step % 1000 == 0:\n",
-    "        print(f'- Iteration {step}, MSE: {mse.item():.3f}')\n",
+    "    if step % 100 == 0:\n",
+    "        print(f'- Iteration {step}, MSE: {mse.item():.4f}')\n",
     "\n",
     "\n",
     "# Create a plot showing only values under 0.2 on the y-axis\n",
